--- a/frameworks/Clojure/macchiato/benchmark_config.json
+++ b/frameworks/Clojure/macchiato/benchmark_config.json
@@ -4,10 +4,6 @@
     "default": {
       "json_url": "/json",
       "plaintext_url": "/plaintext",
-      "db_url": "/db",
-      "query_url": "/queries/",
-      "fortune_url": "/fortunes",
-      "update_url": "/updates/",
       "port": 3000,
       "approach": "Realistic",
       "classification": "Micro",
@@ -16,14 +12,12 @@
       "language": "Clojure",
       "flavor": "Macchiato",
       "orm": "Raw",
-      "platform": "nodejs",
       "webserver": "None",
       "os": "Linux",
       "database_os": "Linux",
       "display_name": "macchiato",
       "notes": "",
-      "versus": "nodejs",
-      "tags": ["broken"]
+      "versus": "nodejs"
     }
   }]
 }
