--- a/frameworks/Clojure/ring-http-exchange/benchmark_config.json
+++ b/frameworks/Clojure/ring-http-exchange/benchmark_config.json
@@ -81,6 +81,26 @@
         "display_name": "ring-http-exchange-robaho-graalvm",
         "notes": "",
         "versus": "ring-http-exchange-robaho"
+      },
+      "robaho-openj9": {
+        "json_url": "/json",
+        "plaintext_url": "/plaintext",
+        "fortune_url": "/fortunes",
+        "port": 8080,
+        "approach": "Realistic",
+        "classification": "Platform",
+        "database": "postgres",
+        "framework": "None",
+        "language": "Clojure",
+        "flavor": "None",
+        "orm": "Raw",
+        "platform": "None",
+        "webserver": "None",
+        "os": "Linux",
+        "database_os": "Linux",
+        "display_name": "ring-http-exchange-robaho-openj9",
+        "notes": "",
+        "versus": "ring-http-exchange-robaho"
       }
     }
   ]
