--- a/frameworks/Clojure/ring-http-exchange/benchmark_config.json
+++ b/frameworks/Clojure/ring-http-exchange/benchmark_config.json
@@ -60,6 +60,24 @@
         "notes": "",
         "versus": "ring-http-exchange-robaho"
       },
+      "robaho-async": {
+        "fortune_url": "/fortunes",
+        "port": 8080,
+        "approach": "Realistic",
+        "classification": "Platform",
+        "database": "postgres",
+        "framework": "None",
+        "language": "Clojure",
+        "flavor": "None",
+        "orm": "Raw",
+        "platform": "Ring",
+        "webserver": "None",
+        "os": "Linux",
+        "database_os": "Linux",
+        "display_name": "ring-http-exchange-robaho-async",
+        "notes": "",
+        "versus": "ring-http-exchange-robaho"
+      },
       "graalvm": {
         "json_url": "/json",
         "plaintext_url": "/plaintext",
